<resources>
    <string name="app_name">Indice Masa Corporal</string>
    <string name="textView_titulo">Cálculo de IMC</string>
    <string name="textView_peso">Peso (kg)</string>
    <string name="textView_altura">Altura (mts)</string>
    <string name="editText_peso">Peso</string>
    <string name="editText_altura">Altura</string>
    <string name="button_calcular">Calcular IMC</string>
    <string name="textView_resultado">Resultado:</string>
    <string name="textView_resultado_Imc_Interpretación">Interpretación del IMC: </string>
    <string name="peso_bajo">Peso Bajo</string>
    <string name="peso_normal">Peso Normal</string>
    <string name="peso_alto">Peso Alto</string>

    <!--Recursos para elementos de menu-->
    <string name="itemMenu_camara">Camara</string>
    <string name="itemMenu_busqueda">Busqueda</string>
    <string name="itemMenu_configuracion">Configuración</string>
    <string name="itemMenu_acerca_de">Acerca de</string>
    <string name="itemMenu_browser">Navegador Web</string>


    <!-- Recursos para actividad de About Me -->


    <string name="textView_app_version">Versión 1.0</string>
    <string name="textView_fecha">06 de Septiembre 2024</string>
    <string name="textView_desarrollador">Desarrollador: Jorge Bugarini</string>
    <string name="button_return">Regresar</string>

    <string name="channel_name">Indice de masa corporal</string>
    <string name="channel_description">Canal de notificaciones de IMC"</string>

    <string name="textView_settingsTitle">Configuración</string>
    <string name="textView_lightMode">Tema claro</string>
    <string name="textView_darkMode">Tema oscuro</string>
    <string name="textView_systemMode">Tema determinado por el sistema</string>

</resources>