<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavander"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:menu="@menu/toolbar_menu" />

    <TextView
        style="@style/GreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/textView_titulo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_peso" />

    <EditText
        android:id="@+id/editText_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textView_peso"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_altura" />

    <EditText
        android:id="@+id/editText_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_altura"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_calcularIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/button_calcular" />

    <TextView
        android:id="@+id/textView_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_resultado" />

    <TextView
        android:id="@+id/textView_imc_interpretacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_resultado_Imc_Interpretación" />

</LinearLayout>